lead-scan/force-app/main/default/objects/Lead/fields/Chamber_of_Commerce_Number__c.field-meta.xml
<CustomField>
    <fullName>Chamber_of_Commerce_Number__c</fullName>
    <description>Dutch Chamber of Commerce (KvK) number, used for duplicate checks and mapped to the Account on conversion.</description>
    <label>Chamber of Commerce Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>