lead-scan/force-app/main/default/objects/Lead/fields/Scan_ICP_Version__c.field-meta.xml
<CustomField>
    <fullName>Scan_ICP_Version__c</fullName>
    <description>Version of the ideal customer profile used when the lead was scored.</description>
    <label>Scan ICP Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>