lead-scan/force-app/main/default/objects/Lead/fields/Scan_Opening_Line__c.field-meta.xml
<CustomField>
    <fullName>Scan_Opening_Line__c</fullName>
    <description>Suggested opening line for the first contact, written by the weekly lead scan.</description>
    <label>Scan Opening Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>