lead-scan/force-app/main/default/objects/Lead/fields/Scan_Run__c.field-meta.xml
<CustomField>
    <fullName>Scan_Run__c</fullName>
    <description>Weekly lead scan run in which this lead was found. Used to trace and roll back a run.</description>
    <label>Scan Run</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Scan_Run__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>