lead-scan/force-app/main/default/objects/Lead/fields/Scan_Score__c.field-meta.xml
<CustomField>
    <fullName>Scan_Score__c</fullName>
    <description>Fit score from 0 to 100 against the ideal customer profile, assigned by the weekly lead scan.</description>
    <label>Scan Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>