lead-scan/force-app/main/default/objects/Lead/fields/Scan_Segment__c.field-meta.xml
<CustomField>
    <fullName>Scan_Segment__c</fullName>
    <description>Search segment that produced this lead. Used to measure conversion per segment.</description>
    <label>Scan Segment</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Scan_Segment__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>