lead-scan/force-app/main/default/objects/Lead/fields/Scan_Signal__c.field-meta.xml
<CustomField>
    <fullName>Scan_Signal__c</fullName>
    <description>Type of buying signal that made the weekly lead scan select this lead.</description>
    <label>Scan Signal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vacancy</fullName>
            </value>
            <value>
                <fullName>Merger</fullName>
            </value>
            <value>
                <fullName>Reorganisation</fullName>
            </value>
            <value>
                <fullName>Tender</fullName>
            </value>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>Lookalike</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>