lead-scan/force-app/main/default/objects/Lead/fields/Scan_Sources__c.field-meta.xml
<CustomField>
    <fullName>Scan_Sources__c</fullName>
    <description>Source URLs supporting every claim the weekly lead scan made about this lead.</description>
    <label>Scan Sources</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>