lead-scan/force-app/main/default/objects/Lead/validationRules/Scan_Block_Convert_Placeholder_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Scan_Block_Convert_Placeholder_Name</fullName>
    <active>true</active>
    <description>Blocks converting a lead while its last name is still the placeholder value, so no placeholder contacts are created.</description>
    <errorConditionFormula>AND(
    IsConverted,
    NOT(PRIORVALUE(IsConverted)),
    LastName = &quot;Onbekend&quot;
)</errorConditionFormula>
    <errorDisplayField>LastName</errorDisplayField>
    <errorMessage>Vul eerst een echte contactpersoon in. Een lead met achternaam &apos;Onbekend&apos; kan niet worden geconverteerd.</errorMessage>
</ValidationRule>