lead-scan/force-app/main/default/objects/Lead/validationRules/Scan_Reason_Unqualified_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Scan_Reason_Unqualified_Required</fullName>
    <active>true</active>
    <description>Requires a reason when a lead from the weekly lead scan is set to Unqualified. The reason feeds the self-learning loop.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(LeadSource, &quot;Claude Weekly Scan&quot;),
    ISPICKVAL(Status, &quot;Unqualified&quot;),
    ISBLANK(TEXT(Reason_unqualified__c))
)</errorConditionFormula>
    <errorDisplayField>Reason_unqualified__c</errorDisplayField>
    <errorMessage>Vul een reden in (Reason unqualified). Deze reden gebruikt de leadscan om beter te leren.</errorMessage>
</ValidationRule>